hphp/test/zend/good/Zend/tests/class_constants_002.php.expectf
int(1)
int(5)
int(10)

Fatal error: Class undefined: NoSuchClass in %s/class_constants_002.php on line 11
